@@ -19,7 +19,6 @@
 
 package edu.umd.cs.findbugs.detect;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
@@ -45,7 +44,7 @@ import edu.umd.cs.findbugs.visitclass.PreorderVisitor;
  * that memory, which means that the logger configuration is lost.
  */
 public class LostLoggerDueToWeakReference extends OpcodeStackDetector {
-    private static final List<MethodDescriptor> methods = Arrays.asList(
+    private static final List<MethodDescriptor> methods = List.of(
             new MethodDescriptor("java/util/logging/Logger", "getLogger", "(Ljava/lang/String;)Ljava/util/logging/Logger;", true),
             new MethodDescriptor("java/util/logging/Logger", "getLogger", "(Ljava/lang/String;Ljava/lang/String;)Ljava/util/logging/Logger;", true));
 
